~ fixes for the Java 13 variety (found some bugs)